add iuoc ME and FE

--- a/ME/base/so3/dts/Makefile
+++ b/ME/base/so3/dts/Makefile
@@ -19,5 +19,5 @@ dtb-$(CONFIG_SOO_CHAT) += chat.dtb
 dtb-$(CONFIG_SOO_WAGOLED) += wagoled.dtb
 dtb-$(CONFIG_SOO_SWITCH_KNX) += switch_knx.dtb
 dtb-$(CONFIG_SOO_SWITCH_ENOCEAN) += switch_enocean.dtb
-
+dtb-$(CONFIG_SOO_IUOC) += iuoc.dtb
 
