--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -218,6 +218,7 @@ BR2_COMPILER_PARANOID_UNSAFE_PATH=y
 #
 # Security Hardening Options
 #
+BR2_PIC_PIE_ARCH_SUPPORTS=y
 # BR2_PIC_PIE is not set
 BR2_SSP_NONE=y
 # BR2_SSP_REGULAR is not set
@@ -226,6 +227,7 @@ BR2_SSP_NONE=y
 BR2_RELRO_NONE=y
 # BR2_RELRO_PARTIAL is not set
 # BR2_RELRO_FULL is not set
+BR2_FORTIFY_SOURCE_ARCH_SUPPORTS=y
 BR2_FORTIFY_SOURCE_NONE=y
 # BR2_FORTIFY_SOURCE_1 is not set
 # BR2_FORTIFY_SOURCE_2 is not set
@@ -247,6 +249,7 @@ BR2_TOOLCHAIN_EXTERNAL=y
 #
 # Sourcery CodeBench toolchains available for the EABI ABI
 #
+# BR2_TOOLCHAIN_EXTERNAL_BOOTLIN is not set
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 # BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD is not set
 BR2_TOOLCHAIN_EXTERNAL_PREINSTALLED=y
@@ -255,8 +258,11 @@ BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
 BR2_PACKAGE_HAS_TOOLCHAIN_EXTERNAL=y
 BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="arm-none-linux-gnueabihf"
+BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_ARCH_SUPPORTS=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-none-linux-gnueabihf"
-BR2_TOOLCHAIN_EXTERNAL_GCC_9=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_11 is not set
+BR2_TOOLCHAIN_EXTERNAL_GCC_10=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_6 is not set
@@ -269,6 +275,18 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_9=y
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_4 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_3 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_OLD is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_16 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_15 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_14 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_13 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_12 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_11 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_10 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_9 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_8 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_7 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_4 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_3 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_2 is not set
@@ -398,13 +416,7 @@ BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_17=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_18=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_19=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_20=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_0=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_1=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_2=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_3=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST_5_4=y
-BR2_TOOLCHAIN_HEADERS_LATEST=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="5.4"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.20"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -417,7 +429,8 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_6=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_7=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_8=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_9=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="9"
+BR2_TOOLCHAIN_GCC_AT_LEAST_10=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="10"
 BR2_TOOLCHAIN_HAS_MNAN_OPTION=y
 BR2_TOOLCHAIN_HAS_SYNC_1=y
 BR2_TOOLCHAIN_HAS_SYNC_2=y
