soo.iuoc local coop with soo.blind - WIP

--- a/ME/base/so3/soo/drivers/vuihandlerfront/Makefile
+++ b/ME/base/so3/soo/drivers/vuihandlerfront/Makefile
@@ -1,3 +1,4 @@
 obj-$(CONFIG_VUIHANDLER_FRONTEND) := vuihandlerfront.o
 
-vuihandlerfront-y := vuihandler.o
+obj-y := vuihandler.o
+#vuihandlerfront-y := vuihandler.o
