Alignment with SO3

--- a/ME/base/so3/configs/rpi4_64_avz_defconfig
+++ b/ME/base/so3/configs/rpi4_64_avz_defconfig
@@ -53,7 +53,8 @@ CONFIG_IO_MAPPING_BASE=0xffff900000000000
 CONFIG_BCM283x_MU_UART=y
 CONFIG_UART_LL_PADDR=0xfe215040
 # CONFIG_MMC is not set
-CONFIG_RAMDEV=y
+# CONFIG_RAMDEV is not set
+# CONFIG_SP804 is not set
 CONFIG_ARM_TIMER=y
 CONFIG_GIC=y
 
@@ -65,19 +66,18 @@ CONFIG_GIC=y
 #
 # Filesystems
 #
-CONFIG_FS_FAT=y
-# CONFIG_ROOTFS_NONE is not set
+CONFIG_ROOTFS_NONE=y
 # CONFIG_ROOTFS_MMC is not set
-CONFIG_ROOTFS_RAMDEV=y
+# CONFIG_ROOTFS_RAMDEV is not set
 
 #
 # IPC
 #
-CONFIG_IPC_SIGNAL=y
-CONFIG_IPC_PIPE=y
-CONFIG_HEAP_SIZE=8
+# CONFIG_IPC_SIGNAL is not set
+# CONFIG_IPC_PIPE is not set
+CONFIG_HEAP_SIZE=2
 # CONFIG_RTOS is not set
 CONFIG_AVZ=y
-# CONFIG_SOO is not set
+CONFIG_SOO=y
 CONFIG_MMU=y
 # CONFIG_DEBUG_PRINTK is not set
