--- a/ME/base/so3/configs/vexpress_full_defconfig
+++ b/ME/base/so3/configs/vexpress_full_defconfig
@@ -1,11 +1,13 @@
 #
-# Automatically generated file; DO NOT EDIT.
-# SO3 Configuration
+# Automatically generated make config: don't edit
+# SO3 Polymorphic OS Configuration
 #
 CONFIG_ARCH_ARM32=y
 # CONFIG_ARCH_ARM64 is not set
+# CONFIG_SO3VIRT is not set
 CONFIG_ARCH="arm32"
-CONFIG_CROSS_COMPILE="arm-none-linux-gnueabihf-"
+CONFIG_CROSS_COMPILE="arm-none-eabi-"
+# CONFIG_ARM_TRUSTZONE is not set
 
 #
 # Platform
@@ -14,10 +16,17 @@ CONFIG_KERNEL_VADDR=0xc0000000
 CONFIG_VEXPRESS=y
 # CONFIG_RPI4 is not set
 CONFIG_RAM_BASE=0x80000000
-# end of Platform
-
+CONFIG_RAM_SIZE=0x3f000000
 # CONFIG_THREAD_ENV is not set
 CONFIG_PROC_ENV=y
+
+#
+# Kernel & CPU features
+#
+# CONFIG_SMP is not set
+CONFIG_NR_CPUS=1
+CONFIG_HZ=100
+CONFIG_SCHED_FLIP_SCHEDFREQ=30
 
 #
 # SO3 Scheduling configuration
@@ -25,17 +34,17 @@ CONFIG_PROC_ENV=y
 CONFIG_SCHED_RR=y
 # CONFIG_SCHED_PRIO is not set
 CONFIG_SCHED_FREQ_PREEMPTION=y
-# end of SO3 Scheduling configuration
 
 #
 # Drivers
 #
 CONFIG_UART=y
+CONFIG_IO_MAPPING_BASE=0xe0000000
 # CONFIG_I2C is not set
 CONFIG_NET=y
 CONFIG_FB=y
 CONFIG_INPUT=y
-# CONFIG_DW_APB_UART is not set
+# CONFIG_NS16550 is not set
 CONFIG_PL011_UART=y
 CONFIG_UART_LL_PADDR=0x1c090000
 # CONFIG_MMC is not set
@@ -46,15 +55,11 @@ CONFIG_GIC=y
 CONFIG_PL111_CLCD=y
 CONFIG_PL050_KMI=y
 CONFIG_SMC911X=y
-# end of Drivers
 
 #
 # SO3 Applications
 #
 # CONFIG_APP_SAMPLE is not set
-# end of SO3 Applications
-
-CONFIG_KERNEL_VIRT_ADDR=0xc0000000
 
 #
 # Filesystems
@@ -63,15 +68,15 @@ CONFIG_FS_FAT=y
 # CONFIG_ROOTFS_NONE is not set
 # CONFIG_ROOTFS_MMC is not set
 CONFIG_ROOTFS_RAMDEV=y
-# end of Filesystems
 
 #
 # IPC
 #
 CONFIG_IPC_SIGNAL=y
 CONFIG_IPC_PIPE=y
-# end of IPC
-
+CONFIG_HEAP_SIZE=32
 # CONFIG_RTOS is not set
+# CONFIG_AVZ is not set
+# CONFIG_SOO is not set
 CONFIG_MMU=y
 CONFIG_DEBUG_PRINTK=y
