--- a/ME/base/so3/arch/Kconfig
+++ b/ME/base/so3/arch/Kconfig
@@ -11,7 +11,7 @@ endchoice
 
 config SO3VIRT
 		bool "SO3 Paravirtualized OS (running on AVZ)"
-		depends on MMU
+		depends on MMU && !AVZ
 
 config ARCH
 	string "ARM Architecture"
