--- a/ME/base/so3/configs/refso3_64_defconfig
+++ b/ME/base/so3/configs/refso3_64_defconfig
@@ -8,15 +8,15 @@ CONFIG_SO3VIRT=y
 CONFIG_ARCH="arm64"
 CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 # CONFIG_ARM_TRUSTZONE is not set
-CONFIG_KERNEL_VADDR=0xffff800000000000
-CONFIG_RAM_BASE=0x41000000
+CONFIG_KERNEL_VADDR=0xffff800010000000
+CONFIG_RAM_BASE=0x00000000
 CONFIG_RAM_SIZE=0x3f000000
 
 #
 # Platform
 #
-CONFIG_VIRT64=y
-# CONFIG_RPI4_64 is not set
+# CONFIG_VIRT64 is not set
+CONFIG_RPI4_64=y
 # CONFIG_VA_BITS_39 is not set
 CONFIG_VA_BITS_48=y
 CONFIG_THREAD_ENV=y
