--- a/ME/base/so3/configs/rpi4_64_pv_defconfig
+++ b/ME/base/so3/configs/rpi4_64_pv_defconfig
@@ -4,18 +4,17 @@
 #
 # CONFIG_ARCH_ARM32 is not set
 CONFIG_ARCH_ARM64=y
-# CONFIG_SO3VIRT is not set
+CONFIG_SO3VIRT=y
 CONFIG_ARCH="arm64"
 CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 # CONFIG_ARM_TRUSTZONE is not set
-CONFIG_KERNEL_VADDR=0xffff800000000000
+CONFIG_KERNEL_VADDR=0xffff800010000000
 CONFIG_RAM_BASE=0x00000000
 CONFIG_RAM_SIZE=0x3f000000
 
 #
 # Platform
 #
-# CONFIG_ARM64VT is not set
 # CONFIG_VIRT64 is not set
 CONFIG_RPI4_64=y
 # CONFIG_VA_BITS_39 is not set
@@ -26,10 +25,8 @@ CONFIG_PROC_ENV=y
 #
 # Kernel & CPU features
 #
-CONFIG_SMP=y
-CONFIG_NR_CPUS=4
-# CONFIG_CPU_PSCI is not set
-CONFIG_CPU_SPIN_TABLE=y
+# CONFIG_SMP is not set
+CONFIG_NR_CPUS=1
 CONFIG_HZ=100
 CONFIG_SCHED_FLIP_SCHEDFREQ=30
 
@@ -53,31 +50,31 @@ CONFIG_IO_MAPPING_BASE=0xffff900000000000
 CONFIG_BCM283x_MU_UART=y
 CONFIG_UART_LL_PADDR=0xfe215040
 # CONFIG_MMC is not set
-# CONFIG_RAMDEV is not set
-# CONFIG_SP804 is not set
+CONFIG_RAMDEV=y
 CONFIG_ARM_TIMER=y
 CONFIG_GIC=y
 
 #
 # SO3 Applications
 #
-# CONFIG_APP_SAMPLE is not set
+CONFIG_APP_SAMPLE=y
 
 #
 # Filesystems
 #
-CONFIG_ROOTFS_NONE=y
+CONFIG_FS_FAT=y
+# CONFIG_ROOTFS_NONE is not set
 # CONFIG_ROOTFS_MMC is not set
-# CONFIG_ROOTFS_RAMDEV is not set
+CONFIG_ROOTFS_RAMDEV=y
 
 #
 # IPC
 #
-# CONFIG_IPC_SIGNAL is not set
-# CONFIG_IPC_PIPE is not set
-CONFIG_HEAP_SIZE=2
+CONFIG_IPC_SIGNAL=y
+CONFIG_IPC_PIPE=y
+CONFIG_HEAP_SIZE=8
 # CONFIG_RTOS is not set
-CONFIG_AVZ=y
-CONFIG_SOO=y
+# CONFIG_AVZ is not set
+# CONFIG_SOO is not set
 CONFIG_MMU=y
 # CONFIG_DEBUG_PRINTK is not set
