Fixed bug in head and vector initialization

--- a/ME/base/so3/configs/rpi4_64_avz_pv_soo_defconfig
+++ b/ME/base/so3/configs/rpi4_64_avz_pv_soo_defconfig
@@ -4,7 +4,6 @@
 #
 # CONFIG_ARCH_ARM32 is not set
 CONFIG_ARCH_ARM64=y
-# CONFIG_SO3VIRT is not set
 CONFIG_ARCH="arm64"
 CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 # CONFIG_ARM_TRUSTZONE is not set
@@ -76,5 +75,6 @@ CONFIG_ROOTFS_NONE=y
 CONFIG_HEAP_SIZE=8
 # CONFIG_RTOS is not set
 CONFIG_AVZ=y
+CONFIG_SOO=y
 CONFIG_MMU=y
 # CONFIG_DEBUG_PRINTK is not set
