Alignment with SO3

--- a/ME/base/so3/dts/rpi4_64_avz_pv.dts
+++ b/ME/base/so3/dts/rpi4_64_avz_pv.dts
@@ -32,13 +32,9 @@
 	
 	memory@0 {
 		device_type = "memory";
-		reg = <0x0 0x00000000 0x0 0x20000000>; /* 512 MB */
+		reg = <0x0 0x00000000 0x0 0x00c00000>; /* 12 MB for the hypervisor */
 	};
 
-	agency {
-		domain-size = <0x10000000>;
-	};
-	
 	/* GIC interrupt controller */
 	gic:interrupt-controller@ff841000 {
 		compatible = "intc,gic";
@@ -56,18 +52,6 @@
 		status = "ok";
 	};
 
-	/* I2C1 controller (Broadcom Serial Controller BSC1) */
-	i2c1:i2c1@fe804000 {
-		compatible = "bcm,i2c_bsc";
-		reg = <0x0 0xfe804000 0x0 0x400>;
-		status = "disabled";
-		interrupt-parent = <&gic>;
-        	
-		/* IRQ 53 of VC which start at SPI96 -> 96 + 53 = 149 */
-		interrupts = <0 117 4>;
-	};
-
-
 	/* Periodic timer based on ARM CP15 timer */
 	periodic-timer {
 		compatible = "arm,periodic-timer";
@@ -81,12 +65,5 @@
 		compatible = "arm,clocksource-timer";
 		status = "ok";
 	};
-
-    rpisense {
-        compatible = "bcm,rpisense";
-		interrupt-parent = <&gic>;
-		interrupts = <0 113 4>;
-		status = "disabled";
-    };
 	
 };
