--- a/ME/base/so3/dts/rpi4_64_avz_vt.dts
+++ b/ME/base/so3/dts/rpi4_64_avz_vt.dts
@@ -32,20 +32,20 @@
 	
 	memory@0 {
 		device_type = "memory";
-		reg = <0x0 0x00000000 0x0 0x20000000>; /* 512 MB */
+		reg = <0x0 0x00000000 0x0 0x00c00000>; /* 12 MB for the hypervisor */
 	};
 
-	agency {
-		domain-size = <0x10000000>;
-	};
-	
 	/* GIC interrupt controller */
 	gic:interrupt-controller@ff841000 {
 		compatible = "intc,gic";
 		interrupt-controller;
 		#interrupt-cells = <3>;
 		
-		reg = <0x0 0xff841000 0x0 0x1000 0x0 0xff842000 0x0 0x1000>;
+		/* GIC dist, cpu, hyp */
+		reg = <0x0 0x08000000 0x0 0x10000 
+		       0x0 0x08010000 0x0 0x10000
+		       0x0 0x08030000 0x0 0x10000>;
+		       
 		status = "ok";
 	};
 	
@@ -56,23 +56,11 @@
 		status = "ok";
 	};
 
-	/* I2C1 controller (Broadcom Serial Controller BSC1) */
-	i2c1:i2c1@fe804000 {
-		compatible = "bcm,i2c_bsc";
-		reg = <0x0 0xfe804000 0x0 0x400>;
-		status = "disabled";
-		interrupt-parent = <&gic>;
-        	
-		/* IRQ 53 of VC which start at SPI96 -> 96 + 53 = 149 */
-		interrupts = <0 117 4>;
-	};
-
-
 	/* Periodic timer based on ARM CP15 timer */
 	periodic-timer {
 		compatible = "arm,periodic-timer";
 		interrupt-parent = <&gic>;
-		interrupts = <1 11 4>;
+		interrupts = <1 10 4>;
 		status = "ok";
 	};
 	
@@ -81,12 +69,5 @@
 		compatible = "arm,clocksource-timer";
 		status = "ok";
 	};
-
-    rpisense {
-        compatible = "bcm,rpisense";
-		interrupt-parent = <&gic>;
-		interrupts = <0 113 4>;
-		status = "disabled";
-    };
 	
 };
