--- a/ME/base/so3/configs/virt64_vt_defconfig
+++ b/ME/base/so3/configs/virt64_vt_defconfig
@@ -9,14 +9,14 @@ CONFIG_ARCH="arm64"
 CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 # CONFIG_ARM_TRUSTZONE is not set
 CONFIG_KERNEL_VADDR=0xffff800010000000
-CONFIG_RAM_BASE=0x01000000
+CONFIG_RAM_BASE=0x41000000
 CONFIG_RAM_SIZE=0x3f000000
 
 #
 # Platform
 #
-# CONFIG_VIRT64 is not set
-CONFIG_RPI4_64=y
+CONFIG_VIRT64=y
+# CONFIG_RPI4_64 is not set
 # CONFIG_VA_BITS_39 is not set
 CONFIG_VA_BITS_48=y
 # CONFIG_THREAD_ENV is not set
@@ -47,12 +47,14 @@ CONFIG_IO_MAPPING_BASE=0xffff900000000000
 # CONFIG_FB is not set
 # CONFIG_INPUT is not set
 # CONFIG_NS16550 is not set
-CONFIG_BCM283x_MU_UART=y
-CONFIG_UART_LL_PADDR=0xfe215040
+CONFIG_PL011_UART=y
+CONFIG_UART_LL_PADDR=0x09000000
 # CONFIG_MMC is not set
 CONFIG_RAMDEV=y
 CONFIG_ARM_TIMER=y
 CONFIG_GIC=y
+# CONFIG_PL111_CLCD is not set
+# CONFIG_PL050_KMI is not set
 
 #
 # SO3 Applications
