--- a/ME/base/so3/dts/rpi4_64.dts
+++ b/ME/base/so3/dts/rpi4_64.dts
@@ -35,6 +35,10 @@
 		reg = <0x0 0x00000000 0x0 0x20000000>; /* 512 MB */
 	};
 
+	agency {
+		domain-size = <0x10000000>;
+	};
+	
 	/* GIC interrupt controller */
 	gic:interrupt-controller@ff841000 {
 		compatible = "intc,gic";
