--- a/ME/base/so3/configs/rpi4_64_vt_defconfig
+++ b/ME/base/so3/configs/rpi4_64_vt_defconfig
@@ -2,21 +2,22 @@
 # Automatically generated make config: don't edit
 # SO3 Polymorphic OS Configuration
 #
-CONFIG_ARCH_ARM32=y
-# CONFIG_ARCH_ARM64 is not set
+# CONFIG_ARCH_ARM32 is not set
+CONFIG_ARCH_ARM64=y
 # CONFIG_SO3VIRT is not set
-CONFIG_ARCH="arm32"
-CONFIG_CROSS_COMPILE="arm-none-eabi-"
+CONFIG_ARCH="arm64"
+CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 # CONFIG_ARM_TRUSTZONE is not set
+CONFIG_KERNEL_VADDR=0xffff800000000000
+CONFIG_RAM_BASE=0x01000000
 
 #
 # Platform
 #
-CONFIG_KERNEL_VADDR=0xc0000000
-CONFIG_VEXPRESS=y
-# CONFIG_RPI4 is not set
-CONFIG_RAM_BASE=0x80000000
-CONFIG_RAM_SIZE=0x3f000000
+# CONFIG_VIRT64 is not set
+CONFIG_RPI4_64=y
+# CONFIG_VA_BITS_39 is not set
+CONFIG_VA_BITS_48=y
 # CONFIG_THREAD_ENV is not set
 CONFIG_PROC_ENV=y
 
@@ -39,26 +40,23 @@ CONFIG_SCHED_FREQ_PREEMPTION=y
 # Drivers
 #
 CONFIG_UART=y
-CONFIG_IO_MAPPING_BASE=0xe0000000
+CONFIG_IO_MAPPING_BASE=0xffff900000000000
 # CONFIG_I2C is not set
 # CONFIG_NET is not set
-CONFIG_FB=y
-CONFIG_INPUT=y
+# CONFIG_FB is not set
+# CONFIG_INPUT is not set
 # CONFIG_NS16550 is not set
-CONFIG_PL011_UART=y
-CONFIG_UART_LL_PADDR=0x1c090000
+CONFIG_BCM283x_MU_UART=y
+CONFIG_UART_LL_PADDR=0xfe215040
 # CONFIG_MMC is not set
 CONFIG_RAMDEV=y
-# CONFIG_SP804 is not set
 CONFIG_ARM_TIMER=y
 CONFIG_GIC=y
-CONFIG_PL111_CLCD=y
-CONFIG_PL050_KMI=y
 
 #
 # SO3 Applications
 #
-# CONFIG_APP_SAMPLE is not set
+CONFIG_APP_SAMPLE=y
 
 #
 # Filesystems
@@ -73,9 +71,9 @@ CONFIG_ROOTFS_RAMDEV=y
 #
 CONFIG_IPC_SIGNAL=y
 CONFIG_IPC_PIPE=y
-CONFIG_HEAP_SIZE=32
+CONFIG_HEAP_SIZE=8
 # CONFIG_RTOS is not set
 # CONFIG_AVZ is not set
 # CONFIG_SOO is not set
 CONFIG_MMU=y
-CONFIG_DEBUG_PRINTK=y
+# CONFIG_DEBUG_PRINTK is not set
