--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -3073,9 +3073,7 @@ BR2_PACKAGE_BASH=y
 # BR2_PACKAGE_APG is not set
 # BR2_PACKAGE_AT is not set
 BR2_PACKAGE_BASH_COMPLETION=y
-BR2_PACKAGE_AUTO_GETTY_SUPPORT=y
-BR2_PACKAGE_AUTO_GETTY=y
-BR2_PACKAGE_AUTO_GETTY_ROOT_LOGIN=y
+# BR2_PACKAGE_AUTO_GETTY_SUPPORT is not set
 # BR2_PACKAGE_CCRYPT is not set
 # BR2_PACKAGE_CRUDINI is not set
 # BR2_PACKAGE_DIALOG is not set
