--- a/agency/linux/soo/Makefile
+++ b/agency/linux/soo/Makefile
@@ -5,7 +5,7 @@ obj-y	+= kernel/
 obj-y 	+= drivers/
 obj-y	+= core/
 obj-y   += dcm/
-obj-y   += iuoc/
+obj-$(CONFIG_VIUOC_BACKEND)   += iuoc/
 
 obj-y 	+= soolink/
 obj-y	+= lib/
