--- a/ME/base/so3/configs/refso3_64_defconfig
+++ b/ME/base/so3/configs/refso3_64_defconfig
@@ -8,9 +8,7 @@ CONFIG_SO3VIRT=y
 CONFIG_ARCH="arm64"
 CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 # CONFIG_ARM_TRUSTZONE is not set
-CONFIG_KERNEL_VADDR=0xffff800000000000
-CONFIG_RAM_BASE=0x41000000
-CONFIG_RAM_SIZE=0x3f000000
+CONFIG_KERNEL_VADDR=0xffff800010000000
 
 #
 # Platform
@@ -75,8 +73,8 @@ CONFIG_ROOTFS_NONE=y
 #
 # IPC
 #
-CONFIG_IPC_SIGNAL=y
-CONFIG_IPC_PIPE=y
+# CONFIG_IPC_SIGNAL is not set
+# CONFIG_IPC_PIPE is not set
 CONFIG_HEAP_SIZE=8
 # CONFIG_RTOS is not set
 # CONFIG_AVZ is not set
@@ -95,6 +93,7 @@ CONFIG_SOO_REFSO3=y
 # CONFIG_SOO_LEDCTRL is not set
 # CONFIG_SOO_CHAT is not set
 # CONFIG_SOO_WAGOLED is not set
+# CONFIG_SOO_IUOC is not set
 # CONFIG_SOO_SWITCH_KNX is not set
 # CONFIG_SOO_SWITCH_ENOCEAN is not set
 
@@ -117,4 +116,5 @@ CONFIG_VUART_FRONTEND=y
 # CONFIG_VSENSEJ_FRONTEND is not set
 # CONFIG_VENOCEAN_FRONTEND is not set
 # CONFIG_VWAGOLED_FRONTEND is not set
+# CONFIG_VIUOC_FRONTEND is not set
 # CONFIG_VKNX_FRONTEND is not set
