--- a/ME/base/so3/configs/iuoc_64_defconfig
+++ b/ME/base/so3/configs/iuoc_64_defconfig
@@ -9,8 +9,8 @@ CONFIG_ARCH="arm64"
 CONFIG_CROSS_COMPILE="aarch64-none-linux-gnu-"
 # CONFIG_ARM_TRUSTZONE is not set
 CONFIG_KERNEL_VADDR=0xffff800010000000
-CONFIG_RAM_BASE=0x41000000
-CONFIG_RAM_SIZE=0x3f000000
+# CONFIG_RAM_BASE=0x41000000
+# CONFIG_RAM_SIZE=0x3f000000
 
 #
 # Platform
