--- a/ME/base/so3/dts/soo.dtsi
+++ b/ME/base/so3/dts/soo.dtsi
@@ -115,11 +115,15 @@
 				status = "disabled";
 			};
 
+			viuoc {
+				compatible = "viuoc,frontend";
+				status = "disabled";
+			};
+
 			vknx {
 				compatible = "vknx,frontend";
 				status = "disabled";
 			};
 		};
-
 	};
 };
