--- a/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711.dtsi
+++ b/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711.dtsi
@@ -518,17 +518,11 @@
 			#address-cells = <3>;
 			#interrupt-cells = <1>;
 			#size-cells = <2>;
-			interrupts = <GIC_SPI 147 IRQ_TYPE_LEVEL_HIGH>,
+			interrupts = <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH>;
 			interrupt-names = "pcie", "msi";
 			interrupt-map-mask = <0x0 0x0 0x0 0x7>;
 			interrupt-map = <0 0 0 1 &gicv2 GIC_SPI 143
-							IRQ_TYPE_LEVEL_HIGH>,
-					<0 0 0 2 &gicv2 GIC_SPI 144
-							IRQ_TYPE_LEVEL_HIGH>,
-					<0 0 0 3 &gicv2 GIC_SPI 145
-							IRQ_TYPE_LEVEL_HIGH>,
-					<0 0 0 4 &gicv2 GIC_SPI 146
 							IRQ_TYPE_LEVEL_HIGH>;
 			msi-controller;
 			msi-parent = <&pcie0>;
@@ -545,8 +539,7 @@
 			brcm,enable-ssc;
 		};
 
- /* SOO.tech */
- #if 1
+#if 0 /* SOO.tech */
 		genet: ethernet@7d580000 {
 			compatible = "brcm,bcm2711-genet-v5";
 			reg = <0x0 0x7d580000  0x0 0x10000>;
@@ -560,12 +553,12 @@
 				compatible = "brcm,genet-mdio-v5";
 				reg = <0xe14 0x8>;
 				reg-names = "mdio";
-				#address-cells = <0x1>;
-				#size-cells = <0x0>;
+				#address-cells = <0x0>;
+				#size-cells = <0x1>;
 			};
 		};
-#else
-        genet: genet@7d580000 {
+#endif
+                genet: genet@7d580000 {
 			compatible = "brcm,genet-v5";
 			reg = <0x0 0x7d580000  0x0 0x10000>;
 			#address-cells = <0x1>;
@@ -591,7 +584,6 @@
 				};
 			};
 		};
-#endif
 	};
 };
 
