--- a/agency/rootfs/board/rpi4_64/rootfs_overlay/root/iuoc_mqtt_config.json
+++ b/agency/rootfs/board/rpi4_64/rootfs_overlay/root/iuoc_mqtt_config.json
@@ -1,18 +1,15 @@
 {
-    "server_address": "tcp://10.192.91.102:1883",
+    "server_address": "10.192.75.245:1883",
     "client_id": "iuoc_mqtt_client",
     "sub_topics": [ 
-        {"topic": "soo-blind", "me_name": "SOO.blind", "me_type": 0},
-        {"topic": "soo-switch", "me_name": "SOO.switch", "me_type": 4},
-        {"topic": "enocean-store", "me_name": "SOO.enocean", "me_type": 2}
+        {"topic": "/iuoc/server/cover/cmd", "me_name": "SOO.blind", "me_type": 0},
     ],
 
     "pub_topics": [ 
         {"topic": "soo-blind", "me_name": "SOO.blind", "me_type": 0},
-        {"topic": "soo-switch", "me_name": "SOO.switch", "me_type": 4},
-        {"topic": "enocean-store", "me_name": "SOO.enocean", "me_type": 2}
     ],
     "qos": 1,
-    "retry_attemps": 5
+    "retry_attemps": 100000
 }
 
+ 
