Updated configs for RPi4

--- a/u-boot/configs/virt32_defconfig
+++ b/u-boot/configs/virt32_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: arm-linux-gnueabihf-gcc (GCC) 11.3.1 20220604 [releases/gcc-11 revision 591c0f4b92548e3ae2e8173f4f93984b1c7f62bb]
+# Compiler: arm-none-eabi-gcc (15:10.3-2021.07-4) 10.3.1 20210621 (release)
 #
 CONFIG_CREATE_ARCH_SYMLINK=y
 CONFIG_SYS_CACHE_SHIFT_6=y
@@ -207,7 +207,7 @@ CONFIG_AHCI=y
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=110301
+CONFIG_GCC_VERSION=100301
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_OPTIMIZE_INLINING is not set
@@ -299,8 +299,7 @@ CONFIG_BOOTDELAY=2
 # CONFIG_AUTOBOOT_USE_MENUKEY is not set
 # CONFIG_USE_BOOTARGS is not set
 # CONFIG_BOOTARGS_SUBST is not set
-CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="load virtio 0 0x40000000 uEnv.txt; env import 0x40000000; run start"
+# CONFIG_USE_BOOTCOMMAND is not set
 CONFIG_USE_PREBOOT=y
 CONFIG_PREBOOT=""
 CONFIG_DEFAULT_FDT_FILE=""
