--- a/u-boot/configs/virt64_defconfig
+++ b/u-boot/configs/virt64_defconfig
@@ -304,8 +304,7 @@ CONFIG_BOOTDELAY=2
 # CONFIG_AUTOBOOT_USE_MENUKEY is not set
 # CONFIG_USE_BOOTARGS is not set
 # CONFIG_BOOTARGS_SUBST is not set
-CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="load virtio 0 0x40000000 uEnv.txt; env import 0x40000000; run start"
+# CONFIG_USE_BOOTCOMMAND is not set
 # CONFIG_USE_PREBOOT is not set
 CONFIG_DEFAULT_FDT_FILE=""
 
