Removed qemu which is now stored in so3/

--- a/u-boot/configs/rpi4_64_defconfig
+++ b/u-boot/configs/rpi4_64_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: aarch64-linux-gnu-gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0
+# Compiler: aarch64-none-linux-gnu-gcc (Arm GNU Toolchain 11.3.Rel1) 11.3.1 20220712
 #
 CONFIG_CREATE_ARCH_SYMLINK=y
 CONFIG_SYS_CACHE_SHIFT_6=y
@@ -59,9 +59,8 @@ CONFIG_SYS_ARCH_TIMER=y
 # CONFIG_SEMIHOSTING is not set
 # CONFIG_SYS_L2CACHE_OFF is not set
 # CONFIG_ENABLE_ARM_SOC_BOOT0_HOOK is not set
-CONFIG_USE_ARCH_MEMCPY=y
-CONFIG_USE_ARCH_MEMMOVE=y
-CONFIG_USE_ARCH_MEMSET=y
+# CONFIG_USE_ARCH_MEMCPY is not set
+# CONFIG_USE_ARCH_MEMSET is not set
 CONFIG_ARM64_SUPPORT_AARCH32=y
 # CONFIG_ARCH_AT91 is not set
 # CONFIG_ARCH_DAVINCI is not set
@@ -233,7 +232,7 @@ CONFIG_BUILD_TARGET=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=110400
+CONFIG_GCC_VERSION=110301
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_OPTIMIZE_INLINING is not set
@@ -285,7 +284,7 @@ CONFIG_FIT_VERBOSE=y
 CONFIG_FIT_PRINT=y
 CONFIG_LEGACY_IMAGE_FORMAT=y
 CONFIG_SUPPORT_RAW_INITRD=y
-CONFIG_OF_BOARD_SETUP=y
+# CONFIG_OF_BOARD_SETUP is not set
 # CONFIG_OF_SYSTEM_SETUP is not set
 # CONFIG_OF_STDOUT_VIA_ALIAS is not set
 CONFIG_SYS_EXTRA_OPTIONS=""
@@ -401,7 +400,7 @@ CONFIG_SPL_SYS_STACK_F_CHECK_BYTE=0xaa
 # PowerPC and LayerScape SPL Boot options
 #
 # CONFIG_SPL_MD5 is not set
-CONFIG_FDT_SIMPLEFB=y
+# CONFIG_FDT_SIMPLEFB is not set
 
 #
 # Command line interface
@@ -1324,7 +1323,7 @@ CONFIG_SIMPLE_PANEL=y
 CONFIG_CONSOLE_SCROLL_LINES=10
 # CONFIG_LCD is not set
 # CONFIG_VIDEO_SIMPLE is not set
-CONFIG_VIDEO_DT_SIMPLEFB=y
+# CONFIG_VIDEO_DT_SIMPLEFB is not set
 # CONFIG_VIDEO_MCDE_SIMPLE is not set
 # CONFIG_OSD is not set
 # CONFIG_SPLASH_SCREEN is not set
