Aligned with the new dir tree organization

--- a/linux/linux/arch/arm64/configs/virt64_defconfig
+++ b/linux/linux/arch/arm64/configs/virt64_defconfig
@@ -2,15 +2,16 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 5.10.0 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-none-linux-gnu-gcc (GNU Toolchain for the A-profile Architecture 10.2-2020.11 (arm-10.16)) 10.2.1 20201103"
+CONFIG_CC_VERSION_TEXT="aarch64-none-linux-gnu-gcc (Arm GNU Toolchain 11.3.Rel1) 11.3.1 20220712"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=100201
-CONFIG_LD_VERSION=235010000
+CONFIG_GCC_VERSION=110301
+CONFIG_LD_VERSION=202445080000
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO=y
+CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
@@ -1017,7 +1018,13 @@ CONFIG_NET_FLOW_LIMIT=y
 # CONFIG_BT is not set
 # CONFIG_AF_RXRPC is not set
 # CONFIG_AF_KCM is not set
-# CONFIG_WIRELESS is not set
+CONFIG_WIRELESS=y
+# CONFIG_CFG80211 is not set
+
+#
+# CFG80211 needs to be enabled for MAC80211
+#
+CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 # CONFIG_WIMAX is not set
 # CONFIG_RFKILL is not set
 # CONFIG_NET_9P is not set
@@ -1612,7 +1619,6 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_OMAP4 is not set
 # CONFIG_KEYBOARD_XTKBD is not set
-CONFIG_KEYBOARD_CROS_EC=y
 # CONFIG_KEYBOARD_CAP11XX is not set
 # CONFIG_KEYBOARD_BCM is not set
 CONFIG_INPUT_MOUSE=y
@@ -1911,7 +1917,6 @@ CONFIG_I2C_RK3X=y
 #
 # Other I2C/SMBus bus drivers
 #
-CONFIG_I2C_CROS_EC_TUNNEL=y
 # end of I2C Hardware Bus support
 
 # CONFIG_I2C_STUB is not set
@@ -2139,7 +2144,6 @@ CONFIG_POWER_SUPPLY_HWMON=y
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_CHARGER_RT9455 is not set
-# CONFIG_CHARGER_CROS_USBPD is not set
 # CONFIG_CHARGER_UCS1002 is not set
 # CONFIG_CHARGER_BD99954 is not set
 CONFIG_HWMON=y
@@ -2360,7 +2364,6 @@ CONFIG_MFD_CORE=y
 CONFIG_MFD_BD9571MWV=y
 CONFIG_MFD_AXP20X=y
 CONFIG_MFD_AXP20X_I2C=y
-CONFIG_MFD_CROS_EC_DEV=y
 # CONFIG_MFD_MADERA is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
@@ -2465,7 +2468,6 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_AXP20X=y
 CONFIG_REGULATOR_BD718XX=y
 CONFIG_REGULATOR_BD9571MWV=y
-# CONFIG_REGULATOR_CROS_EC is not set
 # CONFIG_REGULATOR_DA9121 is not set
 # CONFIG_REGULATOR_DA9210 is not set
 # CONFIG_REGULATOR_DA9211 is not set
@@ -3022,7 +3024,6 @@ CONFIG_RTC_DRV_DS3232_HWMON=y
 # CONFIG_RTC_DRV_RP5C01 is not set
 # CONFIG_RTC_DRV_V3020 is not set
 # CONFIG_RTC_DRV_ZYNQMP is not set
-CONFIG_RTC_DRV_CROS_EC=y
 
 #
 # on-CPU RTC drivers
@@ -3256,7 +3257,6 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_RT8973A is not set
 # CONFIG_EXTCON_SM5502 is not set
 CONFIG_EXTCON_USB_GPIO=y
-CONFIG_EXTCON_USBC_CROS_EC=y
 CONFIG_MEMORY=y
 # CONFIG_ARM_PL172_MPMC is not set
 CONFIG_IIO=y
@@ -3404,8 +3404,6 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_SPS30 is not set
 # CONFIG_VZ89X is not set
 # end of Chemical Sensors
-
-# CONFIG_IIO_CROS_EC_SENSORS_CORE is not set
 
 #
 # Hid Sensor IIO Common
@@ -3719,7 +3717,6 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_DEBUG is not set
-# CONFIG_PWM_CROS_EC is not set
 # CONFIG_PWM_FSL_FTM is not set
 # CONFIG_PWM_PCA9685 is not set
 
@@ -3790,7 +3787,10 @@ CONFIG_RAS=y
 
 # CONFIG_LIBNVDIMM is not set
 # CONFIG_DAX is not set
-# CONFIG_NVMEM is not set
+CONFIG_NVMEM=y
+CONFIG_NVMEM_SYSFS=y
+# CONFIG_NVMEM_SPMI_SDAM is not set
+# CONFIG_NVMEM_RMEM is not set
 
 #
 # HW tracing support
@@ -3994,9 +3994,6 @@ CONFIG_SUNRPC_BACKCHANNEL=y
 # CONFIG_CIFS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
-CONFIG_9P_FS=y
-# CONFIG_9P_FS_POSIX_ACL is not set
-# CONFIG_9P_FS_SECURITY is not set
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
 CONFIG_NLS_CODEPAGE_437=y
@@ -4424,7 +4421,7 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_COMPRESSED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
-# CONFIG_DEBUG_INFO_DWARF4 is not set
+CONFIG_DEBUG_INFO_DWARF4=y
 # CONFIG_DEBUG_INFO_BTF is not set
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_ENABLE_MUST_CHECK=y
@@ -4454,6 +4451,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
 CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_UBSAN is not set
+CONFIG_HAVE_KCSAN_COMPILER=y
 # end of Generic Kernel Debugging Instruments
 
 CONFIG_DEBUG_KERNEL=y
@@ -4488,6 +4486,7 @@ CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_HAVE_ARCH_KASAN_SW_TAGS=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
+CONFIG_CC_HAS_KASAN_SW_TAGS=y
 CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
 # CONFIG_KASAN is not set
 # end of Memory Debugging
@@ -4672,10 +4671,12 @@ CONFIG_VUIHANDLER_BACKEND=y
 CONFIG_VSENSELED_BACKEND=y
 CONFIG_VSENSEJ_BACKEND=y
 CONFIG_VWAGOLED_BACKEND=y
+# CONFIG_VIUOC_BACKEND is not set
 CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
 CONFIG_RN2483=y
 # CONFIG_KBERRY838 is not set
+# CONFIG_MIPOT32001353 is not set
 
 #
 # vnet backend config
