Updated config for rpi4_64

--- a/linux/rootfs/configs/rpi4_64_defconfig
+++ b/linux/rootfs/configs/rpi4_64_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -g8468926347-dirty Configuration
+# Buildroot -g23aa70acc9 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -223,8 +223,8 @@ BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="aarch64-none-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_ARCH_SUPPORTS=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="aarch64-none-linux-gnu"
-# BR2_TOOLCHAIN_EXTERNAL_GCC_11 is not set
-BR2_TOOLCHAIN_EXTERNAL_GCC_10=y
+BR2_TOOLCHAIN_EXTERNAL_GCC_11=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_10 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
@@ -302,7 +302,7 @@ BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 # BR2_TOOLCHAIN_EXTERNAL_CUSTOM_MUSL is not set
 BR2_TOOLCHAIN_EXTERNAL_HAS_SSP=y
 BR2_TOOLCHAIN_EXTERNAL_HAS_SSP_STRONG=y
-BR2_TOOLCHAIN_EXTERNAL_INET_RPC=y
+# BR2_TOOLCHAIN_EXTERNAL_INET_RPC is not set
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
 # BR2_TOOLCHAIN_EXTERNAL_DLANG is not set
 # BR2_TOOLCHAIN_EXTERNAL_FORTRAN is not set
@@ -320,7 +320,6 @@ BR2_PACKAGE_HOST_GDB_ARCH_SUPPORTS=y
 #
 BR2_TOOLCHAIN_SUPPORTS_ALWAYS_LOCKFREE_ATOMIC_INTS=y
 BR2_TOOLCHAIN_SUPPORTS_VARIADIC_MI_THUNK=y
-BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
 BR2_INSTALL_LIBSTDCPP=y
@@ -393,7 +392,8 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_7=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_8=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_9=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_10=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="10"
+BR2_TOOLCHAIN_GCC_AT_LEAST_11=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="11"
 BR2_TOOLCHAIN_HAS_MNAN_OPTION=y
 BR2_TOOLCHAIN_HAS_SYNC_1=y
 BR2_TOOLCHAIN_HAS_SYNC_2=y
@@ -2687,6 +2687,8 @@ BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 # BR2_PACKAGE_BLUEZ5_UTILS_OBEX is not set
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+# BR2_PACKAGE_BLUEZ5_UTILS_MONITOR is not set
+# BR2_PACKAGE_BLUEZ5_UTILS_TOOLS is not set
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 # BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL is not set
 # BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_AUDIO is not set
