fix cm4 compilation issues

--- a/linux/linux/arch/arm64/boot/dts/broadcom/bcm2711-cm4.dts
+++ b/linux/linux/arch/arm64/boot/dts/broadcom/bcm2711-cm4.dts
@@ -373,22 +373,15 @@
 	status = "okay";
 };
 
-#if 0
-&genet_mdio {
-	phy1: ethernet-phy@1 {
-		/* No PHY interrupt */
-		reg = <0x1>;
-	};
-};
-#else
+
 /** SOO.tech **/
-&genet_mdio {
-	phy1: ethernet-phy@0 {
-		/* No PHY interrupt */
-		reg = <0x0>;
-	};
+
+&phy1 {
+	/* No PHY interrupt */
+	reg = <0x0>;
 };
-#endif
+
+
 
 /* uart0 communicates with the BT module */
 &uart0 {
