--- a/linux/linux/kernel/printk/Makefile
+++ b/linux/linux/kernel/printk/Makefile
@@ -3,3 +3,7 @@ obj-y	= printk.o
 obj-$(CONFIG_PRINTK)	+= printk_safe.o
 obj-$(CONFIG_A11Y_BRAILLE_CONSOLE)	+= braille.o
 obj-$(CONFIG_PRINTK)	+= printk_ringbuffer.o
+
+ifneq ($(CONFIG_SOO),y)
+obj-$(CONFIG_LINUXVIRT) += lprintk.o
+endif
