--- a/linux/linux/arch/arm/kernel/Makefile
+++ b/linux/linux/arch/arm/kernel/Makefile
@@ -94,7 +94,7 @@ obj-$(CONFIG_DEBUG_LL)	+= debug.o
 obj-$(CONFIG_EARLY_PRINTK)	+= early_printk.o
 
 # SOO.tech
-obj-$(CONFIG_IPIPE)	+= ipipe.o
+obj-$(CONFIG_XENOMAI)	+= ipipe.o
 
 # This is executed very early using a temporary stack when no memory allocator
 # nor global data is available. Everything has to be allocated on the stack.
