add venocean to soo.dtsi

--- a/so3/so3/dts/soo.dtsi
+++ b/so3/so3/dts/soo.dtsi
@@ -95,6 +95,11 @@
 				status = "disabled";
 			};
 
+			venocean {
+				compatible = "venocean,frontend";
+				status = "disabled";
+			};
+
 		};
 
 	};
