--- a/linux/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
+++ b/linux/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
@@ -379,6 +379,19 @@
 	status = "okay";
 };
 
+&genet {
+	phy-handle = <&phy1>;
+	phy-mode = "rgmii-rxid";
+	status = "okay";
+};
+
+&genet_mdio {
+	phy1: ethernet-phy@1 {
+		/* No PHY interrupt */
+		reg = <0x1>;
+	};
+};
+
 /* uart0 communicates with the BT module */
 &uart0 {
 	pinctrl-names = "default";
