updated toolchain version to 11.3

--- a/linux/rootfs/configs/cm4_64_defconfig
+++ b/linux/rootfs/configs/cm4_64_defconfig
@@ -217,7 +217,8 @@ BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="aarch64-none-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_ARCH_SUPPORTS=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="aarch64-none-linux-gnu"
-BR2_TOOLCHAIN_EXTERNAL_GCC_10=y
+BR2_TOOLCHAIN_EXTERNAL_GCC_11=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_10 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
@@ -289,7 +290,7 @@ BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 # BR2_TOOLCHAIN_EXTERNAL_CUSTOM_MUSL is not set
 BR2_TOOLCHAIN_EXTERNAL_HAS_SSP=y
 BR2_TOOLCHAIN_EXTERNAL_HAS_SSP_STRONG=y
-BR2_TOOLCHAIN_EXTERNAL_INET_RPC=y
+# BR2_TOOLCHAIN_EXTERNAL_INET_RPC is not set
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
 # BR2_TOOLCHAIN_EXTERNAL_DLANG is not set
 # BR2_TOOLCHAIN_EXTERNAL_FORTRAN is not set
@@ -380,7 +381,8 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_7=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_8=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_9=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_10=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="10"
+BR2_TOOLCHAIN_GCC_AT_LEAST_11=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="11"
 BR2_TOOLCHAIN_HAS_MNAN_OPTION=y
 BR2_TOOLCHAIN_HAS_SYNC_1=y
 BR2_TOOLCHAIN_HAS_SYNC_2=y
